--- a/Views/partials/navbar.ejs
+++ b/Views/partials/navbar.ejs
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarItems">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Vulnerabilities</a>
+                    <a class="nav-link" href="/vulnerabilities">Vulnerabilities</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Assets</a>
