--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,19 +3,19 @@
     
     <div class="container-fluid">
         <div class="row justify-content-center vulnerability-row">
-            <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center" id="vuln-count-4">
+            <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-4">
                 <strong><%= criticalCount %></strong>
                 <p>Critical</p>
             </div>
-            <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center" id="vuln-count-3">
+            <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-3">
                 <strong><%= highCount %></strong>
                 <p>High</p>
             </div>
-            <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center" id="vuln-count-2">
+            <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-2">
                 <strong><%= mediumCount %></strong>
                 <p>Medium</p>
             </div>
-            <div class="col-xl-2 col-md-4  col-sm-6 mx-3 my-5 vulnerability-count text-center" id="vuln-count-1">
+            <div class="col-xl-2 col-md-4  col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-1">
                 <strong><%= lowCount %></strong>
                 <p>Low</p>
             </div>
