Get vulnerability counts from api.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,21 +2,24 @@
 <%- include('partials/navbar.ejs') -%>
     
     <div class="container-fluid">
+        <div class="row loadingGif">
+            <img src="/static/images/ajax-loader.gif"/>
+        </div>
         <div class="row justify-content-center vulnerability-row">
             <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-4">
-                <strong><%= criticalCount %></strong>
+                <strong id="totalCriticalCount">0</strong>
                 <p>Critical</p>
             </div>
             <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-3">
-                <strong><%= highCount %></strong>
+                <strong id="totalHighCount">0</strong>
                 <p>High</p>
             </div>
             <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-2">
-                <strong><%= mediumCount %></strong>
+                <strong id="totalMediumCount">0</strong>
                 <p>Medium</p>
             </div>
             <div class="col-xl-2 col-md-4  col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-1">
-                <strong><%= lowCount %></strong>
+                <strong id="totalLowCount">0</strong>
                 <p>Low</p>
             </div>
         </div>
