--- a/views/vulnerabilities.ejs
+++ b/views/vulnerabilities.ejs
@@ -69,11 +69,11 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col"><span class="text-nowrap">Severity <span class="fas fa-sort-up"></span></span></th>
-                    <th scope="col"><span class="text-nowrap">Name <span class="fas fa-sort-up"></span></span></th>
-                    <th scope="col"><span class="text-nowrap">Family <span class="fas fa-sort-up"></span></span></th>
-                    <th scope="col"><span class="text-nowrap">Plugin ID <span class="fas fa-sort-up"></span></span></th>
-                    <th scope="col"><span class="text-nowrap">Count <span class="fas fa-sort-up"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Severity <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Name <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Family <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Plugin ID <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Count <span class="fas fa-sort"></span></span></th>
                 </tr>
             </thead>
             <tbody id="vulnsTableBody">
