Create order and order by requests for vulnerabilities.

--- a/views/vulnerabilities.ejs
+++ b/views/vulnerabilities.ejs
@@ -73,7 +73,7 @@
                     <th scope="col"><span class="text-nowrap">Name <span class="fas fa-sort"></span></span></th>
                     <th scope="col"><span class="text-nowrap">Family <span class="fas fa-sort"></span></span></th>
                     <th scope="col"><span class="text-nowrap">Plugin ID <span class="fas fa-sort"></span></span></th>
-                    <th scope="col"><span class="text-nowrap">Count <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Count <span class="fas fa-sort-down"></span></span></th>
                 </tr>
             </thead>
             <tbody id="vulnsTableBody">
