--- a/views/vulnerabilities.ejs
+++ b/views/vulnerabilities.ejs
@@ -18,36 +18,45 @@
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <form id="filterVulnsForm" action="/api/vulns" method="POST">
+                                <form id="filterVulnsForm" action="/api/vulnerabilities" method="GET">
                                     <div class="modal-body">
                                         <div class="form-row">
                                             <div class="form-group col">
-                                                <label for="name">Name</label>
-                                                <input type="text" name="name" class="form-control">
+                                                <label for="pluginName">Plugin Name</label>
+                                                <input type="text" name="pluginName" class="form-control">
                                             </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col">
-                                                <label for="ipAddress">IP Address</label>
-                                                <input type="text" name="ipAddress" class="form-control">
+                                                <label for="pluginFamily">Plugin Family</label>
+                                                <input type="text" name="pluginFamily" class="form-control">
                                             </div>
                                         </div>
                                         <div class="form-row">
-                                            <div class="form-group col-6">
-                                                <label for="username">Username</label>
-                                                <input type="text" name="username" class="form-control">
+                                            <div class="form-group col-4">
+                                                <label for="pluginId">Plugin ID</label>
+                                                <input type="number" name="pluginId" class="form-control">
                                             </div>
-                                        </div>
-                                        <div class="form-row">
-                                            <div class="form-group col-6">
-                                                <label for="password">Password</label>
-                                                <input type="password" name="password" class="form-control">
+                                            <div class="form-group col-4">
+                                                <label for="name">Severity</label>
+                                                <select name="severity" class="form-control">
+                                                    <option disabled selected value>Choose an option</option>
+                                                    <option value="">All</option>
+                                                    <option value="4">Critical</option>
+                                                    <option value="3">High</option>
+                                                    <option value="2">Medium</option>
+                                                    <option value="1">Low</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group col-4">
+                                                <label for="perPage">Results per Page</label>
+                                                <input type="number" min="1" max="100" name="perPage" class="form-control">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-success">Create new</button>
+                                        <button type="submit" class="btn btn-success">Apply</button>
                                     </div>
                                 </form>
                             </div>
@@ -79,5 +88,11 @@
             <tbody id="vulnsTableBody">
             </tbody>
         </table>
+    </div>
+    <div class="container mt-2-md mt-4-xs mr-2">
+        <nav>
+            <ul class="pagination justify-content-end hidden">
+            </ul>
+        </nav>
     </div>
 <%- include('partials/footer.ejs') -%>
