Create backend for filtering on vulnerabilities.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <div class="row loadingGif">
             <img src="/static/images/ajax-loader.gif"/>
         </div>
-        <div class="row justify-content-center vulnerability-row">
+        <div class="row justify-content-center vulnerability-row hidden">
             <div class="col-xl-2 col-md-4 col-sm-6 mx-3 my-5 vulnerability-count text-center vuln-count-4">
                 <strong id="totalCriticalCount">0</strong>
                 <p>Critical</p>
